study/output-buggy/ep_output/Closure-68
/Users/stylethinking/Documents/StaticBugCheckers/defects4j/projects/b/Closure-68/src/com/google/javascript/jscomp/parsing/JsDocInfoParser.java:813: error: [MissingCasesInEnumSwitch] Non-exhaustive switch; either add a default or handle the remaining cases: AUTHOR, CONSTANT, CONSTRUCTOR, and 35 others
                    switch (annotation) {
                    ^
    (see http://errorprone.info/bugpattern/MissingCasesInEnumSwitch)
1 error
